bridge working as server and ui update

--- a/sdk-bridge-sample/Podfile
+++ b/sdk-bridge-sample/Podfile
@@ -4,8 +4,8 @@ use_frameworks!
 
 target 'sdk-bridge-sample' do
 	pod 'XyBleSdk', :path => '../../sdk-ble-swift/'
-	pod 'sdk-objectmodel-swift', '~> 0.1.0-beta.0'
-    pod 'sdk-core-swift', '~> 0.1.2-beta.0'
-    pod 'mod-ble-swift', :path => '../../mod-ble-swift/'
+	pod 'sdk-objectmodel-swift', '~> 0.1.2-beta.1'
+    pod 'sdk-core-swift', '~> 0.1.2-beta.6'
+    pod 'sdk-xyobleinterface-swift', :path => '../../sdk-xyobleinterface-swift/'
     pod 'sdk-bridge-swift', :path => '../'
 end
