update verisons for podspec

--- a/SampleiOS/Podfile
+++ b/SampleiOS/Podfile
@@ -3,9 +3,9 @@ platform :ios, '11.0'
 use_frameworks!
 
 target 'sdk-bridge-sample' do
-	pod 'XyBleSdk', :path => '../../sdk-ble-swift/'
+	pod 'XyBleSdk', '~> 0.0.1'
 	pod 'sdk-objectmodel-swift', '~> 0.1.2-beta.3'
     pod 'sdk-core-swift', '~> 0.1.4-beta.7'
-    pod 'sdk-xyobleinterface-swift', :path => '../../sdk-xyobleinterface-swift/'
+    pod 'sdk-xyobleinterface-swift', '~> 0.1.4-beta.4'
     pod 'sdk-bridge-swift', :path => '../'
 end
