--- a/SampleiOS/Podfile
+++ b/SampleiOS/Podfile
@@ -5,7 +5,7 @@ use_frameworks!
 target 'sdk-bridge-sample' do
 	pod 'XyBleSdk', '~> 0.0.1'
 	pod 'sdk-objectmodel-swift', '~> 0.1.2-beta.3'
-    pod 'sdk-core-swift', '~> 0.1.4-beta.7'
+    pod 'sdk-core-swift', '~> 0.1.6-beta.2'
     pod 'sdk-xyobleinterface-swift', '~> 0.1.4-beta.4'
-    pod 'sdk-bridge-swift', :path => '../'
+    pod 'sdk-bletcpbridge-swift', :path => '../'
 end
